--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           </div>
         </div>
       </nav>
+      <div class="text-center h-75">
+        <img src="gabi.png" class="rounded h-50" alt="...">
+      </div>
 </body>
 
 </html>
