--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+          <a class="navbar-brand" href="javascript:void(0)">גבי גבינו</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Link</a>
+                <a class="nav-link" href="javascript:void(0)">מה קרה</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Link</a>
+                <a class="nav-link" href="javascript:void(0)">תעזוב</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Link</a>
+                <a class="nav-link" href="javascript:void(0)">אודות</a>
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="text" placeholder="Search">
-              <button class="btn btn-primary" type="button">Search</button>
+              <input class="form-control me-2" type="text" placeholder="חיפוש">
+              <button class="btn btn-primary" type="button">חיפוש</button>
             </form>
           </div>
         </div>
       </nav>
-      <div class="text-center h-75">
-        
-        <img src="gabi.png" class="rounded h-50" alt="...">
+      <div class="text-center p-3 h-100" style=" background-color: aqua;">
+<h1 style="font-weight: 400;font-weight: bolder;">!!!תעזוב</h1>
+        <img src="gabi.png"   style="border-radius: 100%; width: 500px;" alt="...">
       </div>
 </body>
 </html>
