--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </div>
       </nav>
       <div class="text-center p-3 h-100" style=" background-color: aqua;">
-<h1 style="font-weight: 400;font-weight: bolder;">!!!תעזוב</h1>
-        <img src="gabi.png"   style="border-radius: 100%; width: 360px;" alt="...">
+
+        <img src="ss.jpg"   style=" width: 360px;" alt="...">
       </div>
 </body>
 </html>
