--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Ran-Portfolio</title>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)">גבי גבינו</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">מה קרה</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">תעזוב</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">אודות</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="text" placeholder="חיפוש">
-              <button class="btn btn-primary" type="button">חיפוש</button>
-            </form>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="javascript:void(0)">גבי גבינו</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#mynavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">מה קרה</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">תעזוב</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">אודות</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="text" placeholder="חיפוש" />
+            <button class="btn btn-primary" type="button">חיפוש</button>
+          </form>
         </div>
-      </nav>
-      <div class="text-center p-3 h-100" style=" background-color: aqua;">
-
-        <img src="ss.jpg"   style=" width: 360px;" alt="...">
       </div>
-</body>
+    </nav>
+    <div class="text-center p-3 h-100" style="background-color: aqua">
+      <img src="ss.jpg" style="width: 360px" alt="..." />
+    </div>
+  </body>
 </html>
