--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">מה קרה</a>
+              <a class="nav-link" href="javascript:void(0)">link 1 </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">תעזוב</a>
+              <a class="nav-link" href="javascript:void(0)">link 2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">אודות</a>
+              <a class="nav-link" href="javascript:void(0)">link 3</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -44,7 +44,7 @@
       </div>
     </nav>
     <div class="text-center p-3 h-100" style="background-color: aqua">
-      <img src="ss.jpg" style="width: 360px" alt="..." />
+      <!-- <img src="ss.jpg" style="width: 360px" alt="..." /> -->
     </div>
   </body>
 </html>
